@@ -8,30 +8,33 @@ databases.
 
 1. Overview -----------------------------------------------------------
 
-Bogofilter 0.93.3 and newer can use SQLite 3.2.6 and newer to store
-their tokens. SQLite is a database that handles a large SQL subset and
-stores all tables in one permanent file, and the journal for changes in
-one temporary file that gets automatically removed when no longer
-needed. SQLite3 ships with a command-line client for the shell, named
-sqlite3.
+Bogofilter 0.93.3 and newer can use recent SQLite3 versions to store
+their tokens; see section 2.1 below for supported versions.
+
+SQLite is a database that handles a large SQL subset and stores all
+tables in one permanent file, and the journal for changes in one
+temporary file that gets automatically removed when no longer needed.
+SQLite3 ships with a command-line client for the shell, named sqlite3.
 
 2. Prerequisites ------------------------------------------------------
 
 2.1 Compatibility - supported SQLite versions
 
-At this time, only SQLite 3.3.12 and newer are supported. Older versions
+At this time, only SQLite 3.4.0 and newer are supported. Older versions
 back to 3.0.8 may work, but you are advised to carefully review the
 sqlite3 ChangeLog, because there have been several important bug fixes
-between 3.0.8 and 3.3.12. Bogofilter prints a warning (but continues to
-run) when used with SQLite versions older than 3.2.8. This warning can
-be suppressed by defining the environment variable BF_USE_OLD_SQLITE to
-any value, including the empty value.
+since 3.0.8, including fixes for bugs that can corrupt the database.
+
+Bogofilter prints a warning (but continues to run) when used with SQLite
+versions older than 3.4.0. This warning can be suppressed by defining
+the environment variable BF_USE_OLD_SQLITE to any value, including the
+empty value.
 
 2.2 Installation
 
-To use bogofilter with the SQLite3 back-end driver, you must install
-SQLite 3.2.6 or newer before configuring bogofilter. You can download
-SQLite 3 and find installation instructions for SQLite 3 at
+To use bogofilter with the SQLite3 back-end driver, you must install a
+sufficiently recent SQLite3 version before configuring bogofilter. You
+can download SQLite 3 and find installation instructions for SQLite 3 at
 <http://sqlite.org/>, the SQLite installation is pretty straightforward.
 
 After that, you can configure bogofilter, add --with-database=sqlite
